--- a/Company.PL/appsettings.json
+++ b/Company.PL/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server = .; database = MVCProject; trusted_Connection = true"
+  },
+  "EmailSettings": {
+    "SenderEmail": "moezchibani05@gmail.com",
+    "SenderPassword": "cvnhkqiprfsragks",
+    "SmtpClientServer": "smtp.gmail.com",
+    "SmtpClientPort": "587"
   }
 }
