--- a/Company.PL/appsettings.json
+++ b/Company.PL/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server = .; database = MVCProject; trusted_Connection = true; MultipleActiveResultSets = True"
+    "DefaultConnection": "server = .; database = MVCProject; trusted_Connection = true; MultipleActiveResultSets = True; TrustServerCertificate = true"
   },
   "EmailSettings": {
     "SenderEmail": "moezchibani05@gmail.com",
