Update Search with Ajax

--- a/Company.PL/appsettings.json
+++ b/Company.PL/appsettings.json
@@ -15,5 +15,11 @@
     "SenderPassword": "cvnhkqiprfsragks",
     "SmtpClientServer": "smtp.gmail.com",
     "SmtpClientPort": "587"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "953962114896-kh76edi2c6vtd96lqlcombkbir8csosk.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
   }
 }
