Refactor Forget Password (using MailKit)

--- a/Company.PL/appsettings.json
+++ b/Company.PL/appsettings.json
@@ -11,6 +11,7 @@
     "DefaultConnection": "server = .; database = MVCProject; trusted_Connection = true; MultipleActiveResultSets = True; TrustServerCertificate = true"
   },
   "EmailSettings": {
+    "DisplayName": "Company",
     "SenderEmail": "moezchibani05@gmail.com",
     "SenderPassword": "cvnhkqiprfsragks",
     "SmtpClientServer": "smtp.gmail.com",
